<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context="com.dev.alpha.leruo.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/slidShow"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorBackground2">

        </ViewFlipper>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/home_activity_home"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/home_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:padding="12dp">

            <!--Ownership-->
            <android.support.v7.widget.CardView
                android:id="@+id/btnHome1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/icon_background_circle"
                        android:padding="10dp"
                        android:src="@drawable/ownership" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/navigation_view_item_3"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Identification-->
            <android.support.v7.widget.CardView
                android:id="@+id/btnHome2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/btnHome1"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/icon_background_circle"
                        android:padding="10dp"
                        android:src="@drawable/identification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/navigation_view_item_4"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Movement-->
            <android.support.v7.widget.CardView
                android:id="@+id/btnHome3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/btnHome2"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/icon_background_circle"
                        android:padding="10dp"
                        android:src="@drawable/movement" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/navigation_view_item_5"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Records-->
            <android.support.v7.widget.CardView
                android:id="@+id/btnHome4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnHome1"
                android:layout_marginTop="8dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/icon_background_circle"
                        android:padding="10dp"
                        android:src="@drawable/records" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/navigation_view_item_6"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Ear tagging-->
            <android.support.v7.widget.CardView
                android:id="@+id/btnHome5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnHome2"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/btnHome4"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/icon_background_circle"
                        android:padding="10dp"
                        android:src="@drawable/ear_tagging" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/navigation_view_item_7"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Baits agaent-->
            <android.support.v7.widget.CardView
                android:id="@+id/btnHome6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnHome3"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/btnHome5"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/icon_background_circle"
                        android:padding="10dp"
                        android:src="@drawable/people" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/navigation_view_item_8"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

    <!-- app:itemIconTint="#d20b0d"-->

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:itemTextColor="#333"
        app:menu="@menu/navigation_items" />
</android.support.v4.widget.DrawerLayout>
